--- a/auth/package.json
+++ b/auth/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.11.97",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.12.0",
+    "mongose": "0.0.2-security",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   }
