json web token and secret added to our k8s

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -16,6 +16,13 @@ spec:
       containers:
         - name: auth
           image: tszemzo/auth:latest
+          # List of env variables of our container
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
