--- a/auth/package.json
+++ b/auth/package.json
@@ -4,8 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -23,5 +30,13 @@
     "mongose": "0.0.2-security",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.2.1",
+    "mongodb-memory-server": "^7.4.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5"
   }
 }
