Add next client server to kubernetes

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -22,4 +22,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: tszemzo/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js'
+            dest: .
     
