--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -30,4 +30,12 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
+    - image: tszemzo/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     
