--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -18,6 +18,9 @@ spec:
           image: tszemzo/tickets:latest
           # List of env variables of our container
           env:
+            # As this lives inside the cluster and there arent any user or passwords, this is secure
+            - name: MONGO_URI
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
