--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -38,4 +38,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: tszemzo/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     
