Add expiration service

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -46,4 +46,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: tszemzo/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     
