Add payments service

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -54,4 +54,12 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: tszemzo/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     
